[build-system]
requires = ["poetry_core>=1.0.8"]
build-backend = "poetry.core.masonry.api"


[tool.black]
target-version = ["py311"]
line-length = 79  # default: 88


[tool.isort]
py_version = 311
add_imports = ["from __future__ import annotations"]
atomic = true
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
lines_after_imports = 2
multi_line_output = 3
use_parentheses = true


[tool.mypy]
python_version = 3.11
enable_error_code = [
    "ignore-without-code",
]
strict = true
disallow_subclassing_any = false
warn_return_any = false

[[tool.mypy.overrides]]
module = [
    "mwparserfromhell.*",
    "pywikibot.*",
]
ignore_missing_imports = true


[tool.poetry]
authors = ["JJMC89"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Wiki",
    "Typing :: Typed",
]
description = "Non-free content bot"
keywords = ["bot", "NFC", "NFCC", "non-free", "wikipedia"]
license = "MIT"
name = "nfcbot"
readme = "README.md"
repository = "https://github.com/jjmc89-bot/nfcbot"
version = "0.3.0"

[tool.poetry.dependencies]
python = "^3.11"
mwparserfromhell = "0.6.5"
pywikibot = {version = "8.3.3", extras = ["mwoauth", "mysql"]}
pywikibot-extensions = "23.3.25"

[tool.poetry.dev-dependencies]
pylint = "2.17.7"

[tool.poetry.scripts]
nfcbot = "nfcbot.cli:cli"

[tool.pylint]

[tool.pylint.master]
# Use multiple processes to speed up Pylint.
jobs = 0  # default: 1

[tool.pylint.basic]
# Good variable names which should always be accepted
good-names = "e,f,i,j,k,v,_"  # default: i,j,k,ex,Run,_

[tool.pylint.design]
max-parents = 10

[tool.pylint.format]
max-line-length = 79  # default: 100

[tool.pylint.reports]
reports = "yes"
